@startuml

title __SECURITY's Class Diagram__\n

  namespace learningapp {
    namespace security {
      class learningapp.security.JwtTokenFilter {
          + JwtTokenFilter()
          + doFilter()
      }
    }
  }
  

  namespace learningapp {
    namespace security {
      class learningapp.security.JwtTokenFilterConfigurer {
          + JwtTokenFilterConfigurer()
          + configure()
      }
    }
  }
  

  namespace learningapp {
    namespace security {
      class learningapp.security.JwtTokenProvider {
          - secretKey : String
          - validityInMilliseconds : long
          + JwtTokenProvider()
          + createToken()
          + getAuthentication()
          + getUsername()
          + resolveToken()
          + validateToken()
          # init()
      }
    }
  }
  

  namespace learningapp {
    namespace security {
      class learningapp.security.LearningappUserDetails {
          + LearningappUserDetails()
          + loadUserByUsername()
      }
    }
  }
  

  namespace learningapp {
    namespace security {
      class learningapp.security.WebSecurityConfig {
          + WebSecurityConfig()
          + authenticationManagerBean()
          + configure()
          + passwordEncoder()
          + unauthorizedEntryPoint()
          # configure()
      }
    }
  }
  

  learningapp.security.JwtTokenFilter -up-|> org.springframework.web.filter.GenericFilterBean
  learningapp.security.JwtTokenFilter o-- learningapp.security.JwtTokenProvider : jwtTokenProvider
  learningapp.security.JwtTokenFilterConfigurer -up-|> org.springframework.security.config.annotation.SecurityConfigurerAdapter
  learningapp.security.JwtTokenFilterConfigurer o-- learningapp.security.JwtTokenProvider : jwtTokenProvider
  learningapp.security.JwtTokenProvider o-- learningapp.security.LearningappUserDetails : customUserDetails
  learningapp.security.LearningappUserDetails .up.|> org.springframework.security.core.userdetails.UserDetailsService
  learningapp.security.LearningappUserDetails o-- learningapp.repositories.UserRepository : userRepository
  learningapp.security.WebSecurityConfig -up-|> org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter
  learningapp.security.WebSecurityConfig o-- learningapp.security.JwtTokenProvider : jwtTokenProvider


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
